# ORIE6338_project

./: CMakeLists.txt  Makefile  scip_ea_heur.set
src/: cppmain.cpp  heur_EA.cpp  heur_EA.h
